--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script src="js/player.js"></script>
   <script src="js/extras.js"></script>
   <script src="js/input.js"></script>
-  <script src="js/text.js"></script>
+  <script src="js/hud.js"></script>
   
   <script src="js/game.js"></script>
   
