Worked on On SCreen controls.  Need to fix animation

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="js/player.js"></script>
   <script src="js/extras.js"></script>
   <script src="js/hud.js"></script>
+  <script src="js/osc.js"></script>
   
   <script src="js/game.js"></script>
   
