can shoot seeds with spacebar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="js/map.js"></script>
   <script src="js/sfx.js"></script>
   <script src="js/player.js"></script>
+  <script src="js/weapons.js"></script>
   <script src="js/extras.js"></script>
   <script src="js/hud.js"></script>
   <script src="js/osc.js"></script>
