--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="utf-8"/>
   <title>Awesome Game</title>
-  
+ 
+  <style>
+    body{
+      margin:0;
+    }
+  </style>
+ 
   <script src="libs/phaser.min.js"></script>
 
   <!-- Game States -->
