--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <script src="js/weapons.js"></script>
   <script src="js/extras.js"></script>
   <script src="js/hud.js"></script>
+  <script src="js/display.js"></script>
   <script src="js/osc.js"></script>
   
   <script src="js/game.js"></script>
