--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="js/map.js"></script>
   <script src="js/sfx.js"></script>
   <script src="js/player.js"></script>
+  <script src="js/enemy.js"></script>
   <script src="js/weapons.js"></script>
   <script src="js/extras.js"></script>
   <script src="js/hud.js"></script>
